--- a/front/src/views/chat/Chatting.css
+++ b/front/src/views/chat/Chatting.css
@@ -35,6 +35,43 @@
   border-radius: 10px;
 }
 
+/* 기본 네비게이션 바 스타일 */
+.navbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: white;
+  padding: 10px 20px;
+  color: white;
+}
+
+/* 버튼 스타일 */
+.back-button {
+  background-color: #f44336;
+  border: none;
+  color: white;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 12px;
+  transition: background-color 0.3s ease;
+}
+
+.back-button:hover {
+  background-color: #d32f2f;
+}
+
+/* 유저 이름 스타일 */
+.nav-user {
+  font-size: 18px;
+  color: black;
+  font-weight: bold;
+}
+
 /* @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
